--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                <div class="d-flex  flex-nowrap flex-row justify-content-end">
                    <ul class="nav">
 
-                    <li class="nav-item">
+                    <li class="nav-item item1">
                         <a class="nav-link " id="nav-l" href="#">Product </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item item1">
                         <a class="nav-link" href="#">Customers</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item item1">
                         <a class="nav-link " href="#">Pricing</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item item1">
                         <a class="nav-link " href="#">Resources</a>
                     </li>
                 </ul>
@@ -71,11 +71,11 @@
             </div>
             <div class="col-3 col-xl-3 nav-block ">
                <div class="d-flex align-items-center">
-                <button class="btn get-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Menu</button>
+                <button class="btn get-btn0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Menu</button>
 
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                   <div class="offcanvas-header">
-                    <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                    <h5 id="offcanvasRightLabel">Menu</h5>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
                   <div class="offcanvas-body">
@@ -96,6 +96,10 @@
                          </li>
                      </ul>
                  </div>
+                 <div class="d-flex justify-content-around align-items-center sign-none py-5">
+                    <button type="button" class="btn but btn-outline-secondary" id="sign-in">Sign in</button>
+                <button class="btn but" id="sign-up"> Sign up</button>
+                </div>
                   </div>
                 </div>
                </div>
@@ -229,14 +233,14 @@
         </div>
 
         <div class="row justify-content-center av">
-            <div class="col-md-6 d-flex justify-content-center">
+            <div class="col-lg-6 d-flex justify-content-center">
                 <img class="avatar" src="images/Avator.png" alt=""> 
                 
                 <div class="d-flex align-items-center">
                     <img  src="images/Text.png" alt="">
                 </div>         
  </div>
-            <div class="col-md-6 d-flex justify-content-center">
+            <div class="col-lg-6 d-flex justify-content-center">
                 <div class="d-flex align-items-center">
                     <img  src="images/Text (1).png" alt="">
                 </div>         
@@ -246,14 +250,14 @@
            
         </div>
         <div class="row justify-content-center av">
-            <div class="col-md-6 d-flex justify-content-center">
+            <div class="col-lg-6 d-flex justify-content-center">
                 <div class="d-flex align-items-center">
                     <img  src="images/Text (2).png" alt="">
                 </div>         
 
                 <img class="avatar" src="images/Avator (2).png" alt="">
              </div>
-            <div class="col-md-6 d-flex justify-content-center">
+            <div class="col-lg-6 d-flex justify-content-center">
                 <img class="avatar" src="images/Avator (3).png" alt="">
                 <div class="d-flex align-items-center">
                     <img  src="images/Text (3).png" alt="">
